# kube-rs-study

./: Cargo.toml  Dockerfile  README.md
examples/: custom-resource.rs  dynamic-typing.rs  partially-typed-resource.rs  podmanager-reconciler.rs  typed-resource.rs
src/: cronjob.rs  lib.rs  main.rs
yaml/: deployment.yaml  pod-manager-crd.yaml  sample.yaml
