[package]
name = "kube-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["std"] }
futures = "0.3.21"
k8s-openapi = { version = "0.14.0", features = ["v1_23", "schemars"] }
kube = { version = "0.71.0", features = ["derive", "runtime"] }
schemars = { version = "0.8.8", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }

[[bin]]
name = "crdgen"
path = "src/bin/generate.rs"

[[bin]]
name = "controller"
path = "src/main.rs"